2017-08-10  Uros Bizjak  <ubizjak@gmail.com>

	PR target/81708
	* config/i386/i386.opt (mstack-protector-guard-symbol=): New option
	* config/i386/i386.c (ix86_stack_protect_guard): Use
	ix86_stack_protect_guard_symbol_str to generate varible declaration.
	* doc/invoke.texi (x86 Options): Document
	-mstack-protector-guard-symbol= option.

2017-08-10  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386-protos.h (ix86_split_stack_guard): New prototype.
	* config/i386/i386.c (ix86_split_stack_guard): New function.
	(ix86_xpand_split_stack_prologue): Call ix86_split_stack_guard.
	(ix86_legitimate_address_p) <case UNSPEC_STACK_CHECK>: Remove.
	(i386_asm_output_addr_const_extra) <case UNSPEC_STACK_CHECK>: Ditto.
	(optput_pic_addr_const): Remove UNSPEC_STACK_CHECK handling.
	* config/i386/i386.md (unspec): Remove UNSPEC_STACK_CHECK.
	(split_stack_space_check): Call ix86_split_stack_guard.

2017-08-10  Martin Sebor  <msebor@redhat.com>

	* print-tree.c (print_node): Print location using the established
	format %s:%i%i.
	Replace spaces with colons.
	(debug_raw, debug): Ditto.

2017-08-10  Martin Sebor  <msebor@redhat.com>

	PR c++/81586
	* pretty-print.c (pp_format): Correct the handling of %s precision.

2017-08-10  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/81736
	* config/i386/i386.c (ix86_finalize_stack_realign_flags): Renamed
	to ...
	(ix86_finalize_stack_frame_flags): This.  Also clear
	frame_pointer_needed if -fno-omit-frame-pointer is used without
	stack access.
	(ix86_expand_prologue): Replace ix86_finalize_stack_realign_flags
	with ix86_finalize_stack_frame_flags.
	(ix86_expand_epilogue): Likewise.
	(ix86_expand_split_stack_prologue): Likewise.
	* doc/invoke.texi: Add a note for -fno-omit-frame-pointer.

2017-08-10  Martin Liska  <mliska@suse.cz>

	PR c++/81355
	* c-attribs.c (handle_target_attribute):
	Report warning for an empty string argument of target attribute.

2017-08-09  Jakub Jelinek  <jakub@redhat.com>

	PR c/81687