@@ -1,3 +1,8 @@
+2017-08-11  Martin Liska  <mliska@suse.cz>
+
+	PR ipa/81213
+	* gcc.target/i386/pr81213.c: New test.
+
 2017-08-10  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/81708
