@@ -1,3 +1,9 @@
+2017-08-11  Martin Liska  <mliska@suse.cz>
+
+	PR ipa/81213
+	* config/i386/i386.c (make_resolver_func): Do complete
+	refactoring of the function.
+
 2017-08-10  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/81708
